[project]
name = "dns-benchmark"
version = "0.1.0"
description = "A cross-platform DNS server performance testing tool for evaluating and comparing response speed, stability, and reliability of different DNS servers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.6.0",
    "colorama>=0.4.6",
    "dnspython>=2.8.0",
    "prettytable>=3.17.0",
]
