[project]
name = "dns-benchmark"
version = "0.1.0"
description = "A cross-platform DNS server performance testing tool for evaluating and comparing response speed, stability, and reliability of different DNS servers."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiodns>=3.6.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "aiohttp>=3.9.0",
]
